--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,12 +1,29 @@
 ﻿{
-    "character": {
-    },
-    "status": {
-    },
-    "action": {
-    },
-    "card": {
-    },
-    "artifact": {
+  "character": {
+  },
+  "status": {
+  },
+  "action": {
+  },
+  "card": {
+    "TestCard": {
+      "name": "Test Card"
     }
+  },
+  "artifact": {
+  },
+  "energy": {
+    "Calm": {
+      "name": "Calm Energy",
+      "description": "1 <c=4fe61e>CALM</c> <c=energy>ENERGY</c> for each quarter of your hull you have, up to 3."
+    },
+    "Revenge": {
+      "name": "Revenge Energy",
+      "description": "1 <c=e61ec8>REVENGE</c> <c=energy>ENERGY</c> for each quarter of your hull you have missing."
+    },
+    "Thermal": {
+      "name": "Thermal Energy",
+      "description": "1 <c=f5a449>THERMAL</c> <c=energy>ENERGY</c> for each heat you have."
+    }
+  }
 }
